--- a/assets/css/mainStyles.css
+++ b/assets/css/mainStyles.css
@@ -484,6 +484,42 @@ html {
         position: relative;
         width: 100%;
     }
+   
+    .grid {
+        display: grid;
+        grid-template-columns: 200px;
+        grid-auto-rows: 200px;
+        grid-gap: 15px 15px;
+        margin-left: 10px;
+        position: relative;
+    }
+    
+    #mainContent .grid p {
+        max-width: 200px;
+        height: 50px;
+        background-color: #4aaaa5;
+        color: #ffffff;
+        text-align: center;
+        position: absolute;
+        top: 140px;
+        line-height: 50px;
+    }
+    
+    #mainContent .grid p:nth-child(4)  {
+        top: 350px;
+        left: 0px;
+    }
+    #mainContent .grid p:nth-child(6)  {
+        top: 565px;
+    }
+    #mainContent .grid p:nth-child(8)  {
+        top: 775px;
+        left: 0px;
+        
+    }
+    #mainContent .grid p:nth-child(10)  {
+        top: 990px;
+    }
   }
 
 
