--- a/assets/css/mainStyles.css
+++ b/assets/css/mainStyles.css
@@ -15,163 +15,114 @@ h2, h3 {
     color: #4aaaa5;
 }
 
-p, li, label, button {
+p, li, label, .button>button {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: #777777;
 }
 
-/* NEW NAV */
 
-body {
-    max-height: 100vh;
-  } 
-  
-  #nav-container > nav > ul {
-    list-style-type: none;
-  }
-  
-  /* NAVIGATION */
-  #nav-background {
-    position: fixed;
-    top: 0;
-    z-index: 9000;
-    width: 100%;
-    background-color: white;
-    border-bottom: 1px solid #ddd;
-    /*
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
-    */
-  }
-  
-  #nav-container {
+/* new new new new new */
 
+nav.greedy {
+    position: relative;
+    height: 60px;
     display: flex;
-    max-width: 1000px;
-    margin: 0 auto;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  #nav-header {
-  
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
+    background: #fff;
+    padding: 30px 0;
+    max-width: 960px;
+    margin: auto;
   }
   
-  #nav-logo {
-    color: #fff;
-    text-decoration: none;
+  nav.greedy h1 {
+    display: flex;
+    align-self: stretch;
+    align-items: center;
     background: #4aaaa5;
-    font-size: 2em;
-    padding: 5px;
+    color: #fff;
+    padding: 0 1rem 0 1.5rem;
+    font-weight: bold;
+    margin: 0 10px;
+    font-size: 1.5rem;
   }
-  /* #nav-logo:hover {
-    color: #666;
-  } */
   
-  .nav-ul {
+  nav.greedy button {
+    align-self: stretch;
+    transition: all .4s ease-out;
+    padding: 0 1rem 0 1.5rem;
+    outline: 0;
+    border: 0;
+    font-size: 0.9rem;
+    font-weight: bold;
+    background: #4aaaa5;
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  nav.greedy button.hidden {
+    transition: none;
+    border-right: 0.5rem solid #b6b6b6;
+    width: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  nav.greedy button::after {
+    content: attr(count);
+    display: inline-flex;
+    width: 30px;
+    height: 30px;
+    align-items: center;
+    justify-content: center;
+    background: #9f9f9f;
+    color: #f2f2f2;
+    box-shadow: 0 0 1px 0 rgba(0,0,0,0.8);
+    border-radius: 50%;
+    font-size: 14px;
+    line-height: 14px;
+    margin-left: 1rem;
+    margin-right: calc(-1rem + -8px);
+  }
+  
+  ul.links {
     display: flex;
-    max-width: 700px;
-  }
-  
-  .nav-ul > li {
-    display: flex;
-  }
-  
-  .nav-link {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
+    justify-content: flex-end;
     flex: 1;
-    color: #444;
+    overflow: hidden;
+  }
+  
+  ul.links li {
+    flex: none;
+    padding: 1rem;
+  }
+  
+  ul.links li a {
+    color: #777777;
     text-decoration: none;
-    font-weight: 600;
-    font-size: 1.2rem;
-    -webkit-transition: 200ms;
-    transition: 200ms;
   }
   
-  .nav-link:hover {
-    background-color: #f1f1f1;
+  ul.hidden-links {
+    position: absolute;
+    background: #d8d8d8;
+    right: 0;
+    top: 100%;
   }
   
-  .active-link {
-    background-color: #f1f1f1;
+  ul.hidden-links li a {
+    color: #777777;
+    padding-right: 1rem;
+    text-decoration: none;
   }
   
-  /* END NAVIGATION */
-  
-  
-  /* MOBILE MENU */
-  @media screen and (max-width: 700px) {
-    
-    #nav-container {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      text-align: center;
-    }
-    
-    #nav-menu-button {
-      padding: 1rem;
-      background-color: #f1f1f1;
-      cursor: pointer;
-    }
-    
-    .nav-ul {
-      display: block;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      overflow-y: scroll;
-      direction: rtl;
-      max-height: 80vh;
-    }
-    
-    .hide-ul {
-      max-height: 0vh;
-    }
-    
-    .nav-link {
-      padding: 1rem 0;
-      font-size: 1.3rem;
-      border-bottom: 1px solid #f4f4f4;
-    }
-  }
-  /* END MOBILE MENU */
-  
-  /* DESKTOP MENU */
-  @media screen and (min-width: 701px) {
-    
-    #nav-menu-button {
-      display: none;
-    }
-    
-    .nav-link {
-      padding: 1rem 1.5rem;
-    }
+  ul.hidden-links.hidden {
+    display: none;
   }
   
-  /* This moves the logo so that it's not touching the left side */
-  @media screen and (max-width: 1040px) {
-    #nav-logo {
-      margin-left: 1rem;
-    }
-}
+  ul.hidden-links li {
+    padding: 1rem;
+  }
+
+
   
 
 /* HEADER SECTION
@@ -278,9 +229,7 @@ hr {
 }
 
 /* FORM SECTION */
-#form {
-    
-}
+
 input, textarea  {
     width: 80%;
     padding: 10px;
@@ -311,7 +260,7 @@ label {
 textarea {
     height: 150px;
 }
-button {
+#mainContent .button button {
     width: 100px;
     height: 50px;
     line-height: 50px;
